--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Activity04 Portfolio and Github Web Pages</title>
+    <title>Vance Arnold - Activity04 Portfolio and Github Web Pages</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
@@ -30,6 +31,11 @@
     </div>
 
     <footer>
+        <p>Follow me on:</p>
+        <a href="https://www.facebook.com/vance.arnold.942/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/varnold9/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://twitter.com/VanceArnold4" target="_blank"><i class="fab fa-twitter"></i></a>
+
         <p>&copy; 2024 Vance Arnold</p>
     </footer>
 </body>
